test/syntaxerrors/TestJavaMissingArgLParen.jdc
package exceptions;

public class JavaMissingArgLParen {
    public static void main(String[] args) {
        System.out.println"Hello world!");
    }
}